# python-ace

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  MANIFEST.in  README.md  index.html  mkdocs.yml  requirements.txt  setup.cfg  setup.py  setup_new.py  versioneer.py
.github/: pull_request_template.md
.github/workflows/: publish-to-test-pypi.yml  test.yml
doc/: pacemaker.md
docs/: build_doc.sh  index.md  pacemaker.html  pandoc.css  requirements.txt
docs/pacemaker/: active_learning.md  cli.md  faq.md  inputfile.md  install.md  quickstart.md  utilities.md  workflow.md
docs/source/: conf.py  index.rst  modules.rst  pyace.ace.rst  pyace.data.rst  (+2 more)
lib/ace/: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
lib/ace/ace-evaluator/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
lib/ace/ace-evaluator/extra/: ace_atoms.cpp  ace_atoms.h  ace_calculator.cpp  ace_calculator.h  ace_utils.h
lib/ace/ace-evaluator/extra/utils/: utils_test.cpp  utils_test.h
lib/ace/ace-evaluator/lib/yaml-cpp/: .clang-format  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
lib/ace/ace-evaluator/lib/yaml-cpp/docs/: Breaking-Changes.md  How-To-Emit-YAML.md  How-To-Parse-A-Document-(Old-API).md  Strings.md  Tutorial.md  index.md
lib/ace/ace-evaluator/lib/yaml-cpp/include/yaml-cpp/: anchor.h  binary.h  depthguard.h  dll.h  emitfromevents.h  emitter.h  emitterdef.h  emittermanip.h  emitterstyle.h  eventhandler.h  exceptions.h  mark.h  noexcept.h  null.h  ostream_wrapper.h  parser.h  stlemitter.h  traits.h  yaml.h
lib/ace/ace-evaluator/lib/yaml-cpp/include/yaml-cpp/contrib/: anchordict.h  graphbuilder.h
lib/ace/ace-evaluator/lib/yaml-cpp/include/yaml-cpp/node/: convert.h  emit.h  impl.h  iterator.h  node.h  parse.h  ptr.h  type.h
lib/ace/ace-evaluator/lib/yaml-cpp/include/yaml-cpp/node/detail/: impl.h  iterator.h  iterator_fwd.h  memory.h  node.h  node_data.h  node_iterator.h  node_ref.h
lib/ace/ace-evaluator/lib/yaml-cpp/src/: binary.cpp  collectionstack.h  convert.cpp  depthguard.cpp  directives.cpp  directives.h  emit.cpp  emitfromevents.cpp  emitter.cpp  emitterstate.cpp  emitterstate.h  emitterutils.cpp  emitterutils.h  exceptions.cpp  exp.cpp  exp.h  indentation.h  memory.cpp  node.cpp  node_data.cpp  nodebuilder.cpp  nodebuilder.h  nodeevents.cpp  nodeevents.h  null.cpp  ostream_wrapper.cpp  parse.cpp  parser.cpp  ptr_vector.h  regex_yaml.cpp  regex_yaml.h  regeximpl.h  scanner.cpp  scanner.h  scanscalar.cpp  scanscalar.h  scantag.cpp  scantag.h  scantoken.cpp  setting.h  (+10 more)
lib/ace/ace-evaluator/lib/yaml-cpp/src/contrib/: graphbuilder.cpp  graphbuilderadapter.cpp  graphbuilderadapter.h  yaml-cpp.natvis  yaml-cpp.natvis.md
lib/ace/ace-evaluator/lib/yaml-cpp/util/: CMakeLists.txt  api.cpp  parse.cpp  read.cpp  sandbox.cpp
lib/ace/ace-evaluator/src/: ace_abstract_basis.cpp  ace_abstract_basis.h  ace_array2dlm.h  ace_arraynd.h  ace_c_basis.cpp  ace_c_basis.h  ace_c_basisfunction.h  ace_complex.h  ace_contigous_array.h  ace_evaluator.cpp  ace_evaluator.h  ace_flatten_basis.h  ace_radial.cpp  ace_radial.h  ace_recursive.cpp  ace_recursive.h  ace_spherical_cart.h  ace_timing.h  ace_types.h  ace_version.h  ships_radial.cpp  ships_radial.h
lib/ace/ace-evaluator/src/ace-evaluator/: LICENSE  ace_abstract_basis.cpp  ace_abstract_basis.h  ace_array2dlm.h  ace_arraynd.h  ace_c_basis.cpp  ace_c_basis.h  ace_c_basisfunction.h  ace_complex.h  ace_contigous_array.h  ace_evaluator.cpp  ace_evaluator.h  ace_flatten_basis.cpp  ace_flatten_basis.h  ace_radial.cpp  ace_radial.h  ace_recursive.cpp  ace_recursive.h  ace_spherical_cart.cpp  ace_spherical_cart.h  ace_types.h  ace_utils.h  ace_version.h  ships_radial.cpp  ships_radial.h
lib/ace/ace-evaluator/src/extra/: ace_atoms.cpp  ace_atoms.h  ace_calculator.cpp  ace_calculator.h
lib/ace/ace-evaluator/src/extra/utils/: utils_test.cpp  utils_test.h
lib/ace/src/: main_coupling_constants_util.cpp  main_evaluator.cpp  main_extended.cpp  main_yaml2ace.cpp  main_yaml2python.cpp
lib/ace/src/ace/: ace_b_basis.cpp  ace_b_basis.h  ace_b_basisfunction.cpp  ace_b_basisfunction.h  ace_b_evaluator.cpp  ace_b_evaluator.h  ace_clebsch_gordan.cpp  ace_clebsch_gordan.h  ace_couplings.cpp  ace_couplings.h  ace_spherical_polar.cpp  ace_spherical_polar.h  ace_yaml_input.cpp  ace_yaml_input.h  grace_fs_evaluator.cpp  grace_fs_evaluator.h
lib/ace/src/extra/: grace_fs_calculator.cpp  grace_fs_calculator.h
lib/ace/src/fitting/: ace_b_basis.cpp  ace_b_basis.h  ace_b_basisfunction.cpp  ace_b_basisfunction.h  ace_b_evaluator.cpp  ace_b_evaluator.h  ace_clebsch_gordan.cpp  ace_clebsch_gordan.h  ace_couplings.cpp  ace_couplings.h  ace_spherical_polar.cpp  ace_spherical_polar.h  ace_yaml_input.cpp  ace_yaml_input.h
lib/ace/test/fitting/potentials/: FS_model_shift_scale.asi  FS_model_shift_scale.yaml
lib/ace/utils/cnpy/: CMakeLists.txt  cnpy.cpp  cnpy.h
lib/ace/utils/wigner-cpp/: .clang-format  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
lib/ace/utils/wigner-cpp/include/: CMakeLists.txt
lib/ace/utils/wigner-cpp/include/wigner/: binomial.hpp  constants.hpp  gaunt.hpp  half_integer.hpp  misc.hpp  spherical_harmonic.hpp  wigner.hpp  wigner_3nj.hpp
tests/: Al-Ni_opt_all.yace  Al-Ni_opt_all.yaml  Al-Ni_test_radial_func_name.yaml  Al-r1234.yaml  Al-r1234l12_crad_dif.yaml  Al-r1234l12_crad_dif_2.yaml  Al-r1l0-hole.yaml  Al-r1l0.yaml  Al-r234-2.yaml  Al-r234.yaml  Al.pbe-in.rank3-core-rep.ace  Al.pbe.13.2-metadata.yaml  Al.pbe.13.2.yaml  Al.pbe.in-rank1.ace  Al_r3_test_exp_hole.yaml  Al_r4_test_exp_hole.yaml  Cr_ladder_0.yaml  Cu-aux_data.yaml  Cu.pbe.in.yaml  DFT10B-AgCu.asi  DFT10B-AgCu.yaml  Fe_ladder_0.yaml  Ni_2dens_bug_case.yaml  ZBL_rep.yaml  conftest.py  df-FHI-aims_PBE_tight-Al-ref.pckl.gzip  df_AlNi(murn).pckl.gzip  df_AlNi.pckl.gzip  df_weights.pckl.gzip  multispecies_AlNi.asi  multispecies_AlNi.yaml  multispecies_AlNiCu.yaml  power_order_growth30_true.yaml  power_order_r1.yaml  representative_df.pckl.gzip  sanity_test.py  some_callback.py  ternary_AlCuZn.yaml  test_ACEAtomicEnvironment.py  test_ACEBBasisFunction.py  (+18 more)
(+90 files in other folders)
